cmake_minimum_required(VERSION 3.13)
project(Engis_Farm)

set(CMAKE_CXX_STANDARD 14)

add_executable(Engis_Farm include/Counter.hpp include/Renderable.hpp include/Player.hpp include/Cell.hpp include/FarmAnimal.hpp include/EggProducingFarmAnimal.hpp include/MeatProducingFarmAnimal.hpp include/MilkProducingFarmAnimal.hpp include/Land.hpp include/Facility.hpp include/Coop.hpp include/Barn.hpp include/Well.hpp include/Truck.hpp include/Mixer.hpp include/Chicken.hpp include/Goat.hpp include/Cow.hpp include/Swine.hpp include/Duck.hpp include/Horse.hpp include/Product.hpp include/FarmProduct.hpp include/SideProduct.hpp include/BeefRolade.hpp include/CowMeat.hpp include/SwineMeat.hpp include/ChickenMeat.hpp include/HorseMeat.hpp include/CowMilk.hpp include/GoatMilk.hpp include/ChickenEgg.hpp include/DuckEgg.hpp include/ChickenNugget.hpp include/BeefSteak.hpp include/LinkedList.hpp include/Grassland.hpp include/Scene.hpp include/Time.hpp src/main.cpp src/Cell.cpp src/FarmAnimal.cpp src/Player.cpp src/Renderable.cpp src/Scene.cpp)